--- a/_posts/Coding_Test/Programmers_Test/2023-03-02-(MySQL)LV 1 문제 모음.md
+++ b/_posts/Coding_Test/Programmers_Test/2023-03-02-(MySQL)LV 1 문제 모음.md
@@ -14,7 +14,7 @@ typora-root-url: ../../..
 
 ## Intro..
 
-**SQL 문제들은 많이 없기 때문에 `LV 1 ~ LV 5` 까지 문제들을 레벨별로 모아서 한번에 정리하겠다.**
+SQL 문제들은 많이 없기 때문에 `LV 1 ~ LV 5` 까지 문제들을 레벨별로 모아서 한번에 정리하겠다.
 
 <br><br>
 
@@ -34,9 +34,9 @@ SELECT * from CAR_RENTAL_COMPANY_CAR where options like '%네비게이션%' orde
 
 ### 풀이
 
-**options 필드 값은 리스트로 여러값이 출력되므로 `options like '%네비게이션%'` 형태로 양쪽에 '%' 가 필수!**
+options 필드 값은 리스트로 여러값이 출력되므로 `options like '%네비게이션%'` 형태로 양쪽에 '%' 가 필수!
 
-**또한, 내림차순이므로 `order by car_id desc` 형태로 뒤에 꼭 'desc' 가 필수!(기본값 : asc)**
+또한, 내림차순이므로 `order by car_id desc` 형태로 뒤에 꼭 'desc' 가 필수!(기본값 : asc)
 
 <br><br>
 
@@ -56,7 +56,7 @@ SELECT round(avg(daily_fee),0) as 'AVERAGE_FEE' from CAR_RENTAL_COMPANY_CAR wher
 
 ### 풀이
 
-**`round(avg(daily_fee),0) as 'AVERAGE_FEE'` 만 이해하면 충분한 코드이다.**
+`round(avg(daily_fee),0) as 'AVERAGE_FEE'` 만 이해하면 충분한 코드이다.
 
 * `avg(daily_fee)` 를 통해서 daily_fee 필드의 평균을 구하고,
 
@@ -89,7 +89,7 @@ SELECT count(*) as 'users' from user_info where age is null;
 
 ### 풀이
 
-**`count(*)` 와 `where age is null` 만 이해하면 충분한 코드이다.**
+`count(*)` 와 `where age is null` 만 이해하면 충분한 코드이다.
 
 * `count(*)` 는 조건에 맞는 튜플들 개수를 전부 구해준다.
 * `where age is null` 은 `where age = null` 로 이해하면 되며, SQL에서는 `is null` 로 표기해야 하기 때문에 `is null` 을 사용한다.
@@ -118,3 +118,89 @@ select count(*) as count from ecoli_data where (genotype & 1 or genotype & 4) an
 - [bit 연산](https://www.tcpschool.com/mysql/mysql_operator_bitwise)
 
 <br><br>
+
+## 문제 5 - date, year + date_format, datediff
+
+* **[한 해에 잡은 물고기 수 구하기](https://school.programmers.co.kr/learn/courses/30/lessons/298516)**
+
+<br>
+
+### 코드
+
+```mysql
+select count(*) as fish_count from fish_info where year(date(time)) = 2021;
+```
+
+<br>
+
+### 풀이
+
+**time컬럼(="2021/12/04") 을 date 타입으로 바꾼 후 year 함수로 마무리**
+
+- 아래 같은 풀이도 존재
+- AND TIME >= date("2021-01-01")  
+  AND TIME <= date("2021-12-31")
+  - between 으로 주로 사용 -> 아래는 created_date 컬럼이 date 타입이라 가정
+  - created_date between '2022-10-01' and '2022-10-31'
+  - **주의 : 단 9월은 30일 까지 있는데 31일로 표기 할 시 제대로 동작 안함.**
+
+**+) date_format 사용 방식? -> 소문자 대문자 차이**
+
+- `date_format(created_date, '%Y-%m-%d')` -> 2022-02-01
+
+- `date_format(created_date, '%Y-%M-%D')` -> 2022-October-2nd
+
+**+) datediff(end_date,start_date) ?? -> 날짜 차이 계산 함수**
+
+- `(case when datediff(end_date,start_date)+1 >= 30 then '장기 대여' else '단기 대여' end) as rent_type`
+- 중요 : 날짜 차이에 **+1 까지** 해줘야 정확한 대여일이 구해 진다.
+
+<br><br>
+
+## 문제 6 - concat
+
+* **[잡은 물고기 중 가장 큰 물고기의 길이 구하기](https://school.programmers.co.kr/learn/courses/30/lessons/298515)**
+
+<br>
+
+### 코드
+
+```mysql
+select concat(max(length),"cm") as max_length from fish_info;
+```
+
+<br>
+
+### 풀이
+
+`+`연산자는 다른 dbms 가능한 곳이 있지만 mysql에서는 불가능! `concat` 을 사용
+
+<br><br>
+
+## 문제 7 - case when...then...else...end, round, avg
+
+* **[잡은 물고기의 평균 길이 구하기](https://school.programmers.co.kr/learn/courses/30/lessons/293259)**
+
+<br>
+
+### 코드
+
+```mysql
+select round(avg(
+    case 
+        when length is null then 10
+        else length
+    end
+),2) as average_length from fish_info;
+```
+
+<br>
+
+### 풀이
+
+소수점 3번째 자리에서 반올림 평균이라 round, avg 사용
+
+null 값은 10으로 바꿔 계산하라고 해서 `case when` 조건문 사용 -> 이게 핵심!
+
+<br><br>
+
