--- a/_posts/Coding_Test/Programmers_Test/2023-03-02-(MySQL)LV 1 문제 모음.md
+++ b/_posts/Coding_Test/Programmers_Test/2023-03-02-(MySQL)LV 1 문제 모음.md
@@ -204,3 +204,45 @@ null 값은 10으로 바꿔 계산하라고 해서 `case when` 조건문 사용 
 
 <br><br>
 
+## 문제 8 - max (집계함수)
+
+* **[최댓값 구하기](https://school.programmers.co.kr/learn/courses/30/lessons/59415)**
+
+<br>
+
+### 코드
+
+```mysql
+SELECT max(datetime) from animal_ins;
+```
+
+<br>
+
+### 풀이
+
+너무 쉬운 문제지만 **집계함수는 select 절**에 사용해야하며, 
+
+**"최근일 = max(날짜)"** 로 해결한 아이디어를 이해하는 것이 중요하다.
+
+<br><br>
+
+## 문제 9 - limit
+
+* **[상위 n개 레코드](https://school.programmers.co.kr/learn/courses/30/lessons/59405)**
+
+<br>
+
+### 코드
+
+```mysql
+SELECT name from animal_ins order by datetime limit 1;
+```
+
+<br>
+
+### 풀이
+
+제일 오래된 값 하나 들고 오라고 했는데, 집계함수 min으로 해결하려다가 실패
+
+오름차순 정렬해서 `limit` 를 사용하면 되는 더 간단한 방법이 있었다!
+
