--- a/_posts/Coding_Test/Programmers_Test/2023-03-03-(MySQL)LV 2 문제 모음.md
+++ b/_posts/Coding_Test/Programmers_Test/2023-03-03-(MySQL)LV 2 문제 모음.md
@@ -14,7 +14,7 @@ typora-root-url: ../../..
 
 ## Intro..
 
-**SQL 문제들은 많이 없기 때문에 `LV 1 ~ LV 5` 까지 문제들을 레벨별로 모아서 한번에 정리하겠다.**
+SQL 문제들은 많이 없기 때문에 `LV 1 ~ LV 5` 까지 문제들을 레벨별로 모아서 한번에 정리하겠다.
 
 <br><br>
 
@@ -166,6 +166,7 @@ from ecoli_data order by year, year_dev;
 SQL 실제 실행 순서는 `from -> where -> group by -> select -> order by` 순 이므로 order by 에서 select 절의 결과를 가져다 사용 가능
 
 - **(TMI)여기서 사용자 편의를 위해 MySQL에서는 GROUP BY, ORDER BY, HAVING절에서는 SELECT 절에 정의된 별칭을 사용할수 있다.**
+- **(TMI)서브쿼리는 select 절, from 절, where 절에 사용 가능하다. 각각 스칼라 서브쿼리, 인라인 뷰, 서브쿼리라 부른다.**
 
 <br><br>
 
@@ -279,6 +280,142 @@ select distinct id, email, first_name, last_name from developers d, skillcodes s
 `d.skill_code & s.code = s.code` 은 where 절에서 d스킬 코드에 대해 s코드 전체를 순회하면서 &연산을 한다.
 
 이때, Python 따로, C# 따로 중복으로 조건 성립해서 출력되므로 중복 제거를 위해 **distinct 사용**
+
+<br><br>
+
+## 문제 10 - 2연속 join
+
+* **[업그레이드 된 아이템 구하기](https://school.programmers.co.kr/learn/courses/30/lessons/273711)**
+
+<br>
+
+### 코드
+
+```mysql
+-- from -> where -> group by -> select -> order by
+-- 서브쿼리 여러번 사용 방식 (효율X)
+select b.item_id, 
+(select item_name from item_info where b.item_id = item_id) as item_name, 
+(select rarity from item_info where b.item_id = item_id) as rarity from item_info a join item_tree b on (a.item_id=b.parent_item_id) where a.rarity='RARE' order by b.item_id desc;
+
+-- 조인 2연속 방식 (효율적)
+select c.item_id, c.item_name, c.rarity  
+from item_info a 
+join item_tree b on (a.item_id=b.parent_item_id)  
+join item_info c on (b.item_id=c.item_id)
+where a.rarity='RARE' order by b.item_id desc;
+```
+
+<br>
+
+### 풀이
+
+처음에는 select 절에 서브쿼리를 2개나 작성하는 코드를 구현했는데,
+
+다른 사람들의 힌트를 보니 join으로만 해결한 사람이 있길래 조인을 2연속 하는 방식으로 풀이했다.
+
+- item_info 의 item_id와 item_tree 의 parent_item_id 를 먼저 join 한 후
+- 조인된 id값의 item_info 정보를 구하기 위해 한번 더 item_info 와 조인한다.
+
+<br><br>
+
+## 문제 11 - order by 주의점
+
+* **[진료과별 총 예약 횟수 출력하기](https://school.programmers.co.kr/learn/courses/30/lessons/132202)**
+
+<br>
+
+### 코드
+
+```mysql
+SELECT mcdp_cd as '진료과코드', count(*) as '5월예약건수' from appointment where year(apnt_ymd)=2022 and month(apnt_ymd)=5 group by mcdp_cd order by 5월예약건수, 진료과코드;
+```
+
+<br>
+
+### 풀이
+
+`ORDER BY` 를 사용하는 경우에 MYSQL에서는 따옴표로 감싸면 하나의 컬럼으로 처리하기에 따옴표를 지워서 열의 별칭이나 실제 이름으로 작성하면 됩니다.
+
+- 즉, `order by '5월예약건수', '진료과코드'` 이렇게 작성시 채점 실패
+
+<br><br>
+
+## 문제 12 - floor (버림) + ceil (올림) + truncate (자름)
+
+* **[ 가격대 별 상품 개수 구하기](https://school.programmers.co.kr/learn/courses/30/lessons/131530)**
+
+<br>
+
+### 코드
+
+```mysql
+select floor(price/10000)*10000 as price_group, count(*) as products from product 
+group by floor(price/10000) order by price_group asc;
+```
+
+<br>
+
+### 풀이
+
+0~10000, 10000~20000 등 각 부분들을 0원, 만원, 2만원 이런식으로 그룹핑 해달라고 했는데,
+
+버림을 통해서 0,1,2,3... 으로 그룹핑 했고, 출력은 10000을 곱해서 만원 단위로 나오게 했다.
+
+- 반올림: `ROUND(value, decimals)`
+- 버림: `FLOOR(value)`
+- 올림: `CEIL(value)` 또는 `CEILING(value)`
+- 자르기: `TRUNCATE(value, decimals)`
+
+<br><br>
+
+## 문제 13 - substring (문자 자르기)
+
+* **[ 카테고리 별 상품 개수 구하기](https://school.programmers.co.kr/learn/courses/30/lessons/131529)**
+
+<br>
+
+### 코드
+
+```mysql
+SELECT substring(product_code,1,2) as category, count(*) as products from product group by category order by category;
+```
+
+<br>
+
+### 풀이
+
+부분 문자열 추출: `SUBSTRING(string, position, length)` 또는 `SUBSTRING(string FROM position FOR length)`
+
+<br><br>
+
+## 문제 14 - 서브쿼리에 group by절 사용, distinct
+
+* **[ 중복 제거하기](https://school.programmers.co.kr/learn/courses/30/lessons/59408)**
+
+<br>
+
+### 코드
+
+```mysql
+-- from절에 서브쿼리로 group by 사용하여 count(name)>1 then 1 적용하여 나타냄
+-- 메인쿼리엔 전체 개수 세는걸로 마무리
+SELECT count(*) as count from 
+(select (case when count(name)>1 then 1 else count(name) end) from animal_ins group by name having name is not null) a;
+
+-- 더 쉬운 풀이
+SELECT COUNT(DISTINCT NAME) AS COUNT
+FROM ANIMAL_INS
+WHERE NAME IS NOT NULL;
+```
+
+<br>
+
+### 풀이
+
+`count(name)>1 then 1` 부분이 중복 제거!
+
+`COUNT(DISTINCT NAME)` 처럼 distinct를 이렇게도 사용이 가능!
 
 <br><br>
 
