--- a/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
+++ b/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
@@ -115,65 +115,7 @@ where (food_type, favorites) in (select food_type, max(favorites) from rest_info
 
 <br><br>
 
-## 문제 
-
-* **[헤비 유저가 소유한 장소](https://school.programmers.co.kr/learn/courses/30/lessons/77487)**
-
-<br>
-
-### 코드
-
-```mysql
-# -- 코드를 입력하세요
-SELECT id, name, host_id from places where host_id in (select host_id from places group by host_id having count(*)>=2) order by id;
-```
-
-<br>
-
-### 풀이
-
-**`where host_id in (select host_id from places group by host_id having count(*)>=2)` 이부분이 핵심인 문제!!**
-
-* 여러가지 방법들이 있겠지만, 필자의 생각에는 `host_id` 가 동일한 튜플을 카운트해서 2이상이면 된다고 생각했다.
-  * 카운트는 `host_id`로 그룹핑을 해서 `count(*)` 함수를 사용!!
-* 다만, 여기서 출력에는 그룹핑을 하면 안되니까 `in 쿼리문` 으로 따로 구한것!!
-  * 마지막으로 `where` 문에 `in 쿼리문` 을 한 이유는 `0 or 1` 로 쿼리문 반환하기 때문에 조건문 자리인 `where` 문에 적용!!
-
-<br><br>
-
-## 문제 8
-
-* **[오랜 기간 보호한 동물(2)](https://school.programmers.co.kr/learn/courses/30/lessons/59411)**
-
-<br>
-
-### 코드
-
-```mysql
--- 코드를 입력하세요
-# 보호기간은 outs의 datetime - ins의 datetime
-# 눈여겨 볼것은 order by 뒤에 바로 b.datetime-a.datetime!!!
-# 또한 limit 2로 상위 2개 튜플 출력!!
-SELECT b.animal_id, b.name from animal_ins a join animal_outs b on (b.animal_id=a.animal_id) order by b.datetime-a.datetime desc limit 2;
-```
-
-<br>
-
-### 풀이
-
-**`SELECT b.animal_id, b.name from animal_ins a join animal_outs b on (b.animal_id=a.animal_id)` 처럼 적절히 조인문을 사용하는것도 중요!!**
-
-* 애초에 외래키를 알려줬으므로 조인문을 사용해보는것을 바로 떠올렸던 문제이다.
-* 또한, `animal_outs` 테이블에 접근해서 칼럼들을 가져오는게 옳다.
-
-**`order by b.datetime-a.datetime desc limit 2;` 개인적으로 이부분이 핵심!!**
-
-* `order by` 부분에 칼럼명에 적는형태를 바로 적을 수 있다는점!!!
-* 또한, `limit` 를 통해서 상위 지정된 개수만큼 튜플만 가져올 수 있다!
-
-<br><br>
-
-## 문제 9
+## 문제 4 - 서브쿼리 not in
 
 * **[오랜 기간 보호한 동물(1)](https://school.programmers.co.kr/learn/courses/30/lessons/59044)**
 
@@ -182,75 +124,22 @@ SELECT b.animal_id, b.name from animal_ins a join animal_outs b on (b.animal_id=
 ### 코드
 
 ```mysql
--- 코드를 입력하세요
-SELECT a.name, a.datetime 
-from animal_ins a
-where a.animal_id not in (select a.animal_id from animal_ins a join animal_outs b on a.animal_id=b.animal_id)
-order by a.datetime asc limit 3;
+select name, datetime from animal_ins 
+where animal_id not in (select a.animal_id from animal_ins a join animal_outs b on (a.animal_id=b.animal_id)) 
+order by datetime asc limit 3;
 ```
 
 <br>
 
 ### 풀이
 
-**`where a.animal_id not in (select a.animal_id from animal_ins a join animal_outs b on a.animal_id=b.animal_id)` 가 핵심!!**
+`where animal_id not in (select a.animal_id from animal_ins a join animal_outs b on (a.animal_id=b.animal_id)) ` 가 핵심!!
 
-* `in 쿼리문` 에서 `join` 한 값을 `animal_ins a` 테이블의 `animal_id`  값과 동일하지 않는(not in)것을 조건으로 한다!!
-
-<br><br>
-
-## 문제 10
-
-* **[있었는데요 없었습니다](https://school.programmers.co.kr/learn/courses/30/lessons/59043)**
-
-<br>
-
-### 코드
-
-```mysql
--- 코드를 입력하세요
-SELECT a.animal_id, a.name 
-from animal_ins a join animal_outs b on a.animal_id=b.animal_id 
-where a.datetime > b.datetime order by a.datetime asc;
-```
-
-<br>
-
-### 풀이
-
-**이때까지 이전 문제들을 풀어왔다면, 이 문제는 너무 쉽게 느껴지기 때문에 풀이를 생략하겠다**
+* `in 쿼리문` 에서 `join` 한 값 `animal_id`  이 동일하지 않는(`not in`)것을 조건으로 한다!!
 
 <br><br>
 
-## 문제 11
-
-* **[없어진 기록 찾기](https://school.programmers.co.kr/learn/courses/30/lessons/59042)**
-
-<br>
-
-### 코드
-
-```mysql
--- 코드를 입력하세요
-SELECT animal_id, name from animal_outs
-where animal_id not in
-(select a.animal_id from animal_ins a join animal_outs b on a.animal_id=b.animal_id)
-order by animal_id asc;
-```
-
-<br>
-
-### 풀이
-
-**`where animal_id not in
-(select a.animal_id from animal_ins a join animal_outs b on ` 이부분만 이해했다면 쉬운 문제이다.**
-
-* 앞에서도 이와 유사한 문제가 있었다. 
-* `not in 쿼리문` 을 적절한 위치에서 적절하게 잘 사용하는 연습을 많이 해주자.
-
-<br><br>
-
-## 문제 12
+## 문제 5 - having절은 group by 결과를 사용
 
 * **[조건에 맞는 사용자와 총 거래금액 조회하기](https://school.programmers.co.kr/learn/courses/30/lessons/164668)**
 
@@ -259,53 +148,63 @@ order by animal_id asc;
 ### 코드
 
 ```mysql
--- 코드를 입력하세요
-SELECT b.user_id, b.nickname, sum(a.price) as total_sales from used_goods_board a join used_goods_user b on a.writer_id=b.user_id 
-where a.status = "DONE" 
-group by b.user_id having sum(a.price) >= 700000 order by total_sales asc;
+select b.user_id, b.nickname, sum(a.price) as total_sales from used_goods_board a join used_goods_user b on (a.writer_id=b.user_id) 
+where a.status='DONE'
+group by b.user_id having total_sales >= 700000 
+order by total_sales;
 ```
 
 <br>
 
 ### 풀이
 
-**`from used_goods_board a join used_goods_user b on a.writer_id=b.user_id ` 이것으로  두 테이블을 조인해서 접근해보았다.**
+group by 절의 결과를 보면 `b.user_id, b.nickname, total_sales` 이다. 
 
-**`where a.status = "DONE" ` 이 부분도 문제를 잘 읽었다면, 완료된 거래를 의미한다는것을 알 수 있을 것이다.**
+having 절은 위 결과를 사용한다. 따라서 갑자기 `b.city` 같은 컬럼을 사용하면
 
-**`group by b.user_id having sum(a.price) >= 700000 order by total_sales asc;` 마지막으로 이부분도 중요하다.**
-
-* `having` 부분은 보통 sum같은 함수를 쓰는 것을 사용하도록 하자.
+**"Unknown column 'b.city' in 'having clause" 에러가 발생한다.**
 
 <br><br>
 
-## 문제 13
+## 문제 6 - substr과 concat, 1:N 중복 join 해결
 
 * **[조건에 맞는 사용자 정보 조회하기](https://school.programmers.co.kr/learn/courses/30/lessons/164670)**
-* **`concat` 메소드 기억!@, 기존 `+` 연산으로는 문자+숫자 인 경우 에러가 발생하므로 `concat`을 추천**
 
 <br>
 
 ### 코드
 
 ```mysql
--- 코드를 입력하세요
-SELECT b.user_id, b.nickname, concat(b.city," ", b.street_address1, " ", b.street_address2) as 전체주소, concat(substr(b.tlno,1,3),"-",substr(b.tlno,4,4),"-",substr(b.tlno,8,4)) as 전화번호 
-from used_goods_board a join used_goods_user b on b.user_id=a.writer_id 
-group by b.user_id having count(*) >=3 order by b.user_id desc;
+-- substr + concat 조합!
+-- 1:N 이다 보니 중복 존재 -> distinct
+select distinct b.user_id, b.nickname, concat(b.city,' ', b.street_address1,' ', b.street_address2) as '전체주소', concat(substr(b.tlno,1,3),'-',substr(b.tlno,4,4),'-',substr(b.tlno,8,4)) as '전화번호'
+from used_goods_board a join used_goods_user b on (a.writer_id=b.user_id) 
+where b.user_id in (select writer_id from used_goods_board group by writer_id having count(*)>=3) 
+order by b.user_id desc;
+
+-- 서브쿼리 없이 바로 끝내는 방법 -> 사실 이게 더 효율적 일 듯
+select b.user_id, b.nickname, concat(b.city,' ', b.street_address1,' ', b.street_address2) as '전체주소', concat(substr(b.tlno,1,3),'-',substr(b.tlno,4,4),'-',substr(b.tlno,8,4)) as '전화번호'
+from used_goods_board a join used_goods_user b on (a.writer_id=b.user_id) 
+group by b.user_id having count(*)>=3 
+order by b.user_id desc;
 ```
 
 <br>
 
 ### 풀이
 
-`b.user_id, b.nickname, concat(b.city," ", b.street_address1, " ", b.street_address2) as 전체주소` 
+`concat` 메소드 사용, 기존 `+` 연산으로는 문자+숫자 인 경우 에러가 발생하므로 `concat`을 추천
 
-* `concat` 을 사용해서 연결하였다.
+`substr` 까지 함께 기억해두자.
+
+두 코드의 차이점은 `in 쿼리문` 을 사용했냐 안했냐의 차이일 뿐 동일하다.
+
+- 물론 group by를 바로 사용한 쿼리는 중복 걱정없이 해결이 된 반면,
+- in 쿼리문에 group by를 사용한 쿼리는 1:N 테이블 관계상 중복을 피할 수 없어서 distinct로 해결했다.
 
 <br><br>
 
-## 문제 14
+## 문제 7 - 단일행 서브쿼리
 
 * **[조회수가 가장 많은 중고거래 게시판의 첨부파일 조회하기](https://school.programmers.co.kr/learn/courses/30/lessons/164671)**
 
@@ -314,10 +213,8 @@ group by b.user_id having count(*) >=3 order by b.user_id desc;
 ### 코드
 
 ```mysql
--- 코드를 입력하세요
-SELECT concat("/home/grep/src/",b.board_id,"/",b.file_id,b.file_name,b.file_ext) as file_path
-from used_goods_board a join used_goods_file b on a.board_id=b.board_id 
-where a.views in (select max(a.views) from used_goods_board a)
+select concat('/home/grep/src/',b.board_id,'/',file_id,file_name,file_ext) as file_path from used_goods_board a join used_goods_file b on (a.board_id=b.board_id) 
+where a.views = (select max(views) from used_goods_board) 
 order by b.file_id desc;
 ```
 
@@ -325,18 +222,148 @@ order by b.file_id desc;
 
 ### 풀이
 
-**`SELECT concat("/home/grep/src/",b.board_id,"/",b.file_id,b.file_name,b.file_ext) as file_path` 에서 볼것은??**
+`where a.views = (select max(views) from used_goods_board)` 가 핵심!
 
-*  `concat` 함수 사용을 꼭 기억!
-
-**`from used_goods_board a join used_goods_file b on a.board_id=b.board_id `를 해야 두테이블의 연관된 데이터들을 조회 할 수 있는것**
-
-* 어디서 어느 키를 중점으로 join을 하는지 잘 판단
-
-**`where a.views in (select max(a.views) from used_goods_board a)` 이 중요했다**
-
-* 실수로 in 쿼리문에 `()` 를 붙이지 않아서 에러가 발생했었다,,
-* 또한 `where` 문에 in 쿼리문을 사용해서 `max` 값을 따로 구해서 사용하는 이런 형태에도 익숙해지자@@
+* in 쿼리문 뿐만아니라 "=" 으로도 비교 가능하다 (단일행이라서!)
 
 <br><br>
 
+## 문제 8 - not in 활용
+
+* **[업그레이드 할 수 없는 아이템 구하기](https://school.programmers.co.kr/learn/courses/30/lessons/273712)**
+
+<br>
+
+### 코드
+
+```mysql
+-- A->B : A가 부모, B가 업데이트 완료상태
+-- 최종 업데이트 : 자신을 부모로 가지고 있지 않은 아이템을 찾으면 된다. (not in 활용)
+
+select a.item_id, a.item_name, a.rarity from item_info a join item_tree b on (a.item_id=b.item_id) 
+where a.item_id not in (select a.item_id from item_info a join item_tree b on (a.item_id=b.parent_item_id)) 
+order by a.item_id desc;
+```
+
+<br>
+
+### 풀이
+
+`select a.item_id, a.item_name, a.rarity from item_info a join item_tree b on (a.item_id=b.item_id) ` 처음 from절의 join문은 select의 컬럼을 출력하기 위한 목적이고,
+
+`where a.item_id not in (select a.item_id from item_info a join item_tree b on (a.item_id=b.parent_item_id)) ` 두번째 where절의 join문이 핵심이다.
+
+- 문제를 해석해보면 "최종 업데이트는 자신을 부모로 가지고 있지 않은 아이템" 이다.
+- 따라서 오히려 자신을 부모로 가지는 아이템을 join문으로 구하고, 
+- 이것을 `not in` 을 통해 자신을 부모로 가지지 않는 아이템을 구한 것이다.
+
+<br><br>
+
+## 문제 9 - 서브쿼리에 group by 활용
+
+* **[물고기 종류 별 대어 찾기](https://school.programmers.co.kr/learn/courses/30/lessons/293261)**
+
+<br>
+
+### 코드
+
+```mysql
+-- 코드를 작성해주세요
+-- 두 테이블 정보가 필요해서 from 절에서 먼저 join
+-- "물고기 종류 별 가장 큰 물고기" 를 조건으로 구해야해서 서브쿼리 활용
+
+select a.id, b.fish_name, a.length from fish_info a join fish_name_info b on (a.fish_type=b.fish_type) 
+where (a.fish_type, a.length) in (select fish_type, max(length) from fish_info group by fish_type) 
+order by a.id;
+```
+
+<br>
+
+### 풀이
+
+`select a.id, b.fish_name, a.length from fish_info a join fish_name_info b on (a.fish_type=b.fish_type)` 처음 from절의 join문은 select의 컬럼을 출력하기 위한 목적이고,
+
+`where (a.fish_type, a.length) in (select fish_type, max(length) from fish_info group by fish_type) ` 두번째 where절의 서브쿼리가 핵심!
+
+- "물고기 종류 별" 라서 group by fish_type를 활용하고,
+- "가장 큰 물고리" 라서 max(length)를 활용했다.
+- 추가로 fish_type 까지 같이 in 연산자로 비교해줘야 정확하게 매핑 되므로 주의하자.
+
+<br><br>
+
+## 문제 10 - left join
+
+* **[ 대장균들의 자식의 수 구하기](https://school.programmers.co.kr/learn/courses/30/lessons/299305)**
+
+<br>
+
+### 코드
+
+```mysql
+select a.id, (case when b.parent_id is null then 0 else count(*) end) as child_count from ecoli_data a left join ecoli_data b on (a.id = b.parent_id) 
+group by a.id 
+order by a.id;
+```
+
+<br>
+
+### 풀이
+
+`(case when b.parent_id is null then 0 else count(*) end) as child_count` 는 select 문에 case when 조건문을 사용해서 null 인 값은 0으로 출력해줬다.
+
+`from ecoli_data a left join ecoli_data b on (a.id = b.parent_id) ` 로 left outer join 을 진행한다. 
+
+- 매핑하는 parent_id 가 null 인 경우가 있어서 이부분은 join이 생략 되기 때문이다.
+- 출력은 전체 id가 다 나와야 하므로 a 테이블을 살리기 위해 left join을 진행했다.
+
+<br><br>
+
+## 문제 11 - 시도조차 못함, 백분율 문제(percent_rank,over,with)
+
+* **[ 대장균의 크기에 따라 분류하기 2](https://school.programmers.co.kr/learn/courses/30/lessons/301649)**
+
+<br>
+
+### 코드
+
+```mysql
+with perTable as(
+select id, percent_rank() over (order by size_of_colony desc) as per 
+from ecoli_data
+)
+
+select a.id, 
+(case when per <= 0.25 then 'CRITICAL' 
+when per <= 0.5 then 'HIGH' 
+when per <= 0.75 then 'MEDIUM' 
+else 'LOW' end) as colony_name 
+from ecoli_data a join perTable b on(a.id=b.id) 
+order by a.id;
+
+-- with를 사용 안하고도 당연히 가능 -> from 절에 바로!
+select a.id, 
+(case when a.per <= 0.25 then 'CRITICAL' 
+when a.per <= 0.5 then 'HIGH' 
+when a.per <= 0.75 then 'MEDIUM' 
+else 'LOW' end) as colony_name 
+from (select id, percent_rank() over (order by size_of_colony desc) as per 
+from ecoli_data) as a
+order by a.id;
+```
+
+<br>
+
+### 풀이
+
+`with` 란 서브쿼리, 임시 테이블처럼 활용할 수 있는 기능
+
+`percent_rank` 함수는 인수로 지정한 값의 그룹 내의 상대적 위치를 나타내는 백분위수 순위(순위 퍼센트, Percent rank)를 반환한다.
+
+`over` 함수는 윈도우 함수이다. 윈도우 함수는 다양한 계산을 도와준다.
+
+- **PARTITION BY**: 데이터 그룹핑 기준을 정의합니다. 이 기준에 따라 데이터를 나누고 각 그룹 내에서 별도로 계산합니다.
+- **ORDER BY**: 윈도우 함수가 적용될 행의 순서를 지정합니다.
+- **ROWS 또는 RANGE**: 특정 범위 내의 행을 지정합니다. 이는 더 정교한 윈도우 정의를 가능하게 합니다.
+- `over (order by size_of_colony desc)` 를 보면 윈도우 함수를 사용해서 order by를 진행한 모습이다.
+
+<br><br>
